Updated Mario js to add death condition when timer equals zero and fixed eslint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,18 @@
         "height": false,
         "txt": false,
         "center": false,
-        "onCharInput": false
+        "onCharInput": false,
+        "loadRoot": false,
+        "loadSound": false,
+        "play": false,
+        "onCollide": false,
+        "wait": false,
+        "get": false,
+        "time": false,
+        "toWorld": false,
+        "color": false
+
+        
 
 
 
