--- a/.eslintrc
+++ b/.eslintrc
@@ -56,16 +56,7 @@
         "onKeyRelease": false,
         "isKeyDown": false,
         "toScreen": false,
-
-        
-
-
-
-
-
-
-
-
+        "volume": false
     },
     "rules": {
         "eqeqeq": ["error", "always"],
